# scrap-files

./: .gitignore  README.md  setup.cfg
scraper/: __init__.py  __main__.py
scraper/adjust-files/: adjust.py
scraper/needed/: url_files.txt  urls_ext.py
scraper/utils/: __init__.py  const.py  scrape.py  scraper.py  util.py
