[metadata]
name = scraper
version = attr: scraper.__version__
author = Mustapha El KAMILI
classifiers =
	    Programming Language :: Python :: 3.13

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.13
packages = find:
test_suite = tests
setup_requires =
    pytest-runner >=3.9.2

install_requires =
    tqdm >= 4.65.0

    requests >= 2.32.3
    beautifulsoup4 >= 4.12.3
    lxml >= 5.3.0

[options.entry_points]
console_scripts =
    scraping = scraper:run
